--- a/src/pages/Ribin.module.css
+++ b/src/pages/Ribin.module.css
@@ -504,7 +504,7 @@
 
   .asset52x1 {
     top: 2.66%;
-    height: 540px;
+    height: 5%;
     object-fit: cover;
   }
 
@@ -530,7 +530,7 @@
   .giftMemRableContainer {
     top: 250px;
     left: 8%;
-    font-size: 50px;
+    font-size: 30px;
     line-height: 115%;
     text-transform: uppercase;
     font-weight: 900;
@@ -540,12 +540,13 @@
 
 
   .toYourLovedContainer {
-    top: 420px;
+    top: 350px;
     left: 8%;
-    font-size: var(--font-size-20xl);
+    font-size: 20px;
     line-height: 0%;
     font-weight: 500;
     color: var(--color-orangered);
+    
   }
 
 
