--- a/src/pages/Ribin.module.css
+++ b/src/pages/Ribin.module.css
@@ -35,7 +35,7 @@
   top: 1524px;
   left: 0;
   background-color: var(--color-red);
-  width: 1728px;
+  width: 100%;
   height: 688px;
 }
 
@@ -43,7 +43,7 @@
 .ribinChild1 {
   top: 3002px;
   background-color: var(--color-orangered);
-  height: 497px;
+  height: 500px;
 }
 
 .ribinChild1 {
