--- a/src/pages/Ribin.module.css
+++ b/src/pages/Ribin.module.css
@@ -148,8 +148,8 @@
 }
 
 .brandsThatTrust {
-  top: 905px;
-  left: 647px;
+  top: 908px;
+  left: 638px;
   text-align: left;
 }
 
@@ -427,6 +427,67 @@
   height: 61px;
 }
 
+.foodBeveragesContainer {
+  position: absolute;
+  left: 138px;
+  line-height: 111.5%;
+  font-weight: 900;
+}
+
+.fashion,
+.foodBeveragesContainer,
+.jewelry {
+  top: 2062px;
+  font-size: var(--font-size-xl);
+}
+
+.fashion {
+  position: absolute;
+  left: 349px;
+  line-height: 111.5%;
+  text-transform: uppercase;
+  font-weight: 900;
+}
+
+.jewelry {
+  left: 553px;
+}
+
+.accessories,
+.accessories1,
+.entertainment,
+.fitness,
+.jewelry {
+  position: absolute;
+  line-height: 111.5%;
+  text-transform: uppercase;
+  font-weight: 900;
+}
+
+.entertainment {
+  top: 2114px;
+  left: 734px;
+  font-size: 30px;
+}
+
+.accessories,
+.accessories1,
+.fitness {
+  top: 2062px;
+  left: 1082px;
+  font-size: var(--font-size-xl);
+}
+
+.accessories,
+.accessories1 {
+  left: 1260px;
+}
+
+.accessories1 {
+  left: 1457px;
+}
+
+
 .send {
   position: absolute;
   top: 4153px;
@@ -491,7 +552,7 @@
   font-family: var(--font-avenir);
 }
 
-/*----------------------For Mobile Screens--------------------------*/
+/*----------------------For Mobile Screens--------------------------
 
 @media screen and (max-width: 600px) {
 
@@ -675,5 +736,410 @@
     width: 0px;
     height: 0px;
   }
+
+}*/
+
+@media only screen and (min-device-width: 1280px) and (max-device-width: 1440px) and (-webkit-min-device-pixel-ratio: 2) {
+  /* CSS rules for MacBook Air */
+
+  .ribinItem {
+    position: absolute;
+    left: 0%;
+    border-radius: 0;
+    background-color: var(--color-orangered);
+    width: 600px;
+    height: 30px;
+  }
+
+  .asset52x1 {
+    top: 2.0%;
+    height: 540px;
+    object-fit: cover;
+  }
+
+  .giftMemRableContainer,
+  .toYourLovedContainer {
+    position: absolute;
+    letter-spacing: 0em;
+    text-align: left;
+  }
+
+
+  .giftMemRableContainer {
+    top: 250px;
+    left: 8%;
+    font-size: 50px;
+    line-height: 115%;
+    text-transform: uppercase;
+    font-weight: 900;
+    color: #b61717;
+    white-space: pre-wrap;
+  }
+
+
+  .toYourLovedContainer {
+    top: 420px;
+    left: 8%;
+    font-size: var(--font-size-20xl);
+    line-height: 0%;
+    font-weight: 500;
+    color: var(--color-orangered);
+  }
+
+
+  .aboutUs,
+  .collection,
+  .download,
+  .partners {
+    position: absolute;
+    top: 1%;
+    left: 38%;
+    font-size: 20px;
+    text-transform: uppercase;
+    font-weight: 1000;
+    color: var(--color-brown);
+    text-align: left;
+  }
+
+  .aboutUs,
+  .collection,
+  .download {
+    left: 55%;
+  }
+
+  .aboutUs,
+  .download {
+    left: 73%;
+  }
+
+  .download {
+    left: 88%;
+  }
+
+  .ribinLogo1Icon {
+    position: absolute;
+    top: 0.2%;
+    left: 1%;
+    width: 200px;
+    height: 90px;
+  }
+
+
+  .ribinChild2 {
+    position: absolute;
+    top: 14%;
+    left: 32%;
+    width: 499px;
+    height: 73px;
+  }
+
+  .aboutUs1,
+  .brandsThatTrust {
+    position: absolute;
+    letter-spacing: 0.01em;
+    font-weight: 800;
+  }
+
+  .brandsThatTrust {
+    top: 14.3%;
+    left: 34%;
+  }
+
+  .ribinWebsite22Icon {
+    top: 17%;
+    left: 0%;
+    right: 0%;
+    width: 100%;
+    height: 450px;
+  }
+
+  .aboutUs1 {
+    top: 44%;
+    left: 44%;
+  }
+
+
+  .ribinAppIsContainer,
+  .ribinIsAContainer {
+    top: 46%;
+    left: 0.2%;
+    letter-spacing: -0.01em;
+    line-height: 120%;
+    font-size: 50px;
+  }
+
+  .ribinIsAContainer {
+    top: 48.6%;
+    font-size: 40px;
+    letter-spacing: 0.01em;
+    width: 80%;
+    font-weight: 800;
+  }
+
+  .asset22x1,
+  .asset22x2,
+  .asset32x1 {
+    position: absolute;
+    top: 43%;
+    left: 53%;
+    width: 621px;
+    height: 520px;
+    object-fit: cover;
+  }
+
+  .rectangleDiv,
+  .ribinChild1,
+  .ribinInner {
+    position: absolute;
+    top: 56%;
+    left: 0;
+    background-color: var(--color-red);
+    width: 100%;
+    height: 550px;
+  }
+
+  .asset22x2,
+  .asset32x1 {
+    top: 63%;
+    left: 50%;
+    width: 476px;
+    height: 66px;
+  }
+
+  .asset32x1 {
+    top: 55%;
+    left: 5%;
+    width: 420px;
+    height: 670px;
+  }
+
+  .downloadTheAppContainer {
+    top: 58%;
+    left: 48%;
+    font-size: var(--font-size-29xl);
+    line-height: 135%
+  }
+
+
+  .rectangleDiv,
+  .ribinChild1 {
+    top: 27%;
+    height: 800px;
+    width: 100%;
+  }
+
+  .ribinChild {
+    top: 0px;
+    background-color: #f09ea6;
+    height: 0px;
+  }
+
+  .ribinChild3 {
+    top: 29%;
+    left: 30%;
+  }
+
+  .ourCollection {
+    top: 29.4%;
+    left: 36%;
+    letter-spacing: 0.01em;
+    text-transform: uppercase;
+    font-weight: 800;
+    color: var(--color-red);
+    text-align: left;
+  }
+
+  .browseOurCollectionContainer {
+    top: 32%;
+    left: 23%;
+    font-size: var(--font-size-21xl);
+    line-height: 126.1%;
+    font-weight: 500;
+  }
+
+  .ribinChild1 {
+    top: 85%;
+    height: 700px;
+  }
+
+  .asset12x1 {
+    top: 35%;
+    left: 12px;
+    width: 98%;
+    height: 190px;
+    object-fit: cover;
+  }
+
+  .foodBeveragesContainer {
+    left: 1%;
+    line-height: 100%;
+    font-weight: 800;
+    text-align: left;
+  }
+
+  .fashion,
+  .foodBeveragesContainer,
+  .jewelry {
+    top: 38.5%;
+  }
+
+  .fashion {
+    left: 15%;
+    font-weight: 800;
+  }
+
+  .jewelry {
+    left: 28%;
+  }
+
+  .accessories,
+  .accessories1,
+  .entertainment,
+  .fitness,
+  .jewelry {
+    line-height: 100%;
+    font-weight: 800;
+  }
+
+  .entertainment {
+    top: 40%;
+    left: 38%;
+    font-size: 35px;
+  }
+
+  .accessories,
+  .accessories1,
+  .fitness {
+    top: 38.5%;
+    left: 64%;
+  }
+
+  .accessories,
+  .accessories1 {
+    left: 76%;
+  }
+
+  .accessories1 {
+    left: 89%;
+  }
+
+
+
+  .ribinChild4 {
+    top: 70%;
+    left: 8%;
+  }
+
+  .contactUs {
+    top: 70.3%;
+    left: 11%;
+  }
+
+  .ribinChild6,
+  .ribinChild7,
+  .ribinChild8 {
+    top: 72.6%;
+    left: 7%;
+    width: 350px;
+    height: 50px;
+  }
+
+  .ribinChild7,
+  .ribinChild8 {
+    top: 73.8%;
+  }
+
+  .ribinChild8 {
+    top: 75%;
+  }
+
+  .johnDoe,
+  .johndoegmailcom,
+  .xxxxxx99 {
+    top: 72.8%;
+    left: 15%;
+    text-align: center;
+  }
+
+  .johndoegmailcom,
+  .xxxxxx99 {
+    top: 74%;
+    left: 10%;
+  }
+
+  .xxxxxx99 {
+    top: 75.1%;
+    left: 14%;
+  }
+
+  .ribinChild9 {
+    top: 77%;
+    left: 13%;
+  }
+
+  .send {
+    top: 77.2%;
+    left: 17%;
+  }
+
+
+  .ribinChild5 {
+    top: 70%;
+    left: 60%;
+  }
+
+  .followUsOn {
+    top: 70.3%;
+    left: 62.5%;
+  }
+
+  .asset32x2 {
+    top: 72%;
+    left: 52%;
+    width: 590px;
+    height: 390px;
+    object-fit: cover;
+  }
+
+  .lineDiv {
+    top: 68%;
+    left: 50%;
+    width: 2px;
+    height: 660px;
+  }
+
+
+  .ribinChild1 {
+    top: 83%;
+    height: 900px;
+    width: 100%;
+  }
+
+  .companyOurServiceContainer,
+  .contactUsFaqContainer {
+    top: 88%;
+    left: 2%;
+  }
+
+  .contactUsFaqContainer {
+    left: 75%;
+  }
+
+  .wantToGiveContainer {
+    top: 91%;
+    left: 39%;
+    font-size: 25px;
+    letter-spacing: 0.01em;
+    line-height: 120%;
+  }
+
+  .asset42x1 {
+    top: 89%;
+    left: 41%;
+    width: 300px;
+    height: 100px;
+    object-fit: cover;
+  }
+
 
 }
