--- a/src/pages/Ribin.module.css
+++ b/src/pages/Ribin.module.css
@@ -67,7 +67,7 @@
   position: absolute;
   top: 56px;
   left: 39%;
-  font-size: var(--font-size-13xl);
+  font-size: 2vw;
   text-transform: uppercase;
   font-weight: 800;
   color: var(--color-brown);
@@ -103,7 +103,7 @@
 .giftMemRableContainer {
   top: 291px;
   left: 74px;
-  font-size: 78px;
+  font-size: 4.2vw;
   line-height: 126.1%;
   text-transform: uppercase;
   font-weight: 900;
@@ -114,7 +114,7 @@
 .toYourLovedContainer {
   top: 501px;
   left: 74px;
-  font-size: var(--font-size-29xl);
+  font-size: 3vw;
   line-height: 0%;
   font-weight: 500;
   color: var(--color-orangered);
@@ -193,7 +193,7 @@
   position: absolute;
   top: 1695px;
   left: 472px;
-  font-size: var(--font-size-21xl);
+  font-size: 2.5vw;
   line-height: 126.1%;
   font-weight: 500;
 }
@@ -272,7 +272,7 @@
   position: absolute;
   top: 2448px;
   left: 132px;
-  font-size: var(--font-size-29xl);
+  font-size: 3vw;
   letter-spacing: -0.01em;
   line-height: 126.1%;
   font-weight: 900;
@@ -282,7 +282,7 @@
 
 .ribinIsAContainer {
   top: 2597px;
-  font-size: var(--font-size-21xl);
+  font-size: 2.5vw;
   letter-spacing: 0.02em;
   font-weight: 800;
 }
