--- a/src/components/Section2.css
+++ b/src/components/Section2.css
@@ -2,8 +2,8 @@
     background: #DA0000;
 }
 .collection-btn{
-    width: 25%;
-    padding: 10px;
+    width: 30vw;
+    padding: 1vw;
     padding-left: 20px;
     padding-right: 20px;
     font-size: 1.6vw;
