--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -9,7 +9,7 @@
     position: absolute;
     bottom: 30vw;
     top: 20vw;
-    padding-left: 50px;
+    padding-left: 5vw;
 }
 .hero-heading{
     font-size: 4vw;
@@ -24,8 +24,8 @@
 }
 .gift-img{
     /* display: inherit; */
-    padding-right: 10px;
-    margin-top: -40px;
+    padding-right: 1vw;
+    margin-top: -2vw;
     width: 5vw;
     /* padding-bottom: 20px; */
 }
