--- a/src/components/Section3.css
+++ b/src/components/Section3.css
@@ -2,7 +2,8 @@
     background: #ffefe5;
 }
 .about-btn{
-    padding: 10px;
+    width: 30vw;
+    padding: 1vw;
     padding-left: 20px;
     padding-right: 20px;
     font-size: 1.4vw;
