--- a/src/components/Section4.css
+++ b/src/components/Section4.css
@@ -11,19 +11,13 @@
     text-align: start !important;
     max-width: 40%;
 }
-/* .sec-3-subheading{
-    margin-top: 7%;
-    color: #C70000;
-    font-weight: 600;
-    font-size: 1.8vw;
-    text-align: start !important;
-} */
 .sec-4-img{
-    padding-left: 50px;
-    padding-right: 50px;
+    padding-left: 7%;
+    padding-right: 7%;
     margin-top: -18%;
     margin-bottom: -18%;
 }
 .download-btn{
     padding-top: 5%;
+    padding-bottom: 10%;
 }
