--- a/src/components/Section5.css
+++ b/src/components/Section5.css
@@ -1,8 +1,8 @@
 .section3{
     background: #ffefe5;
 }
-.about-btn{
-    padding: 10px;
+.contact-btn{
+    padding: 1vw;
     padding-left: 20px;
     padding-right: 20px;
     font-size: 1.4vw;
@@ -18,20 +18,6 @@
 .content-5-2{
     padding-top: 8vw;
     margin-left: -8vw;
-}
-.sec-3-heading{
-    margin-top: 17%;
-    color: #C70000;
-    font-weight: 800;
-    font-size: 2vw;
-    text-align: start !important;
-}
-.sec-3-subheading{
-    margin-top: 7%;
-    color: #C70000;
-    font-weight: 600;
-    font-size: 1.8vw;
-    text-align: start !important;
 }
 .form input{
     border: none;
@@ -50,19 +36,20 @@
     justify-content: center;
     display: flex;
     flex-direction: column;
+    padding-top: 10%;
 }
 .v-line{
     margin-top: 50% !important;
     height: 36vw;
 }
 .sec-5-img{
-    padding-left: 50px;
-    padding-right: 50px;
+    padding-left: 5vw;
+    padding-right: 5vw;
     margin-left: -8vw;
-    /* padding-top: 1%; */
+    padding-top: 7%;
 }
 .send-btn{
-    padding: 10px;
+    padding: 1vw;
     padding-left: 20px;
     padding-right: 20px;
     font-size: 1.4vw;
@@ -72,4 +59,5 @@
     border-radius: 36.5px;
     background: #C70000;
     margin-top: 7%;
+    margin-bottom: 5%;
 }
