--- a/src/components/Section4.css
+++ b/src/components/Section4.css
@@ -21,3 +21,10 @@
     padding-top: 5%;
     padding-bottom: 10%;
 }
+.playstore{
+    width: 12vw;
+}
+.appstore{
+    width: 9.3vw;
+    padding-top: 0.8%;
+}
