--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -101,6 +101,21 @@ nav {
   /* margin: 20px;
   padding-top: 30px; */
 }
+.backed{
+	width: 5vw;
+	max-width: 15rem;
+}
+.logos{
+	display: inline;
+}
+.linearize{
+	display: flex;
+	padding-left: 3vw;
+}
 button{
 	border: 0;
+}
+p {
+	margin-bottom: 0;
+	font-size: 1.5vw;
 }
